--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 ticket_controller
 TODO: send email to the customer
 TODO: add h method to ticket parameters to escape output => http://asciicasts.com/episodes/204-xss-protection-in-rails-3
+TODO: resolve situation with show and show_by_uuid by removing show_by_uuid and changing logic in show
 
 comment_controller
 TODO: send email with comment to the customer
